--- a/week9/worksheet_8.tex
+++ b/week9/worksheet_8.tex
@@ -55,7 +55,7 @@ and no partial \textit{EC} (all parts must be correct) will be given out.
 Additional problems are listed at the end of each assignment. This week's
 assignment is due \textit{Tuesday, March 8th at 2:00pm.}
 
-1. \textbf{Phase Diagram} The phase diagram for carbon is shown in Fig. \ref{fig:carb}.
+1. (4 pts) \textbf{Phase Diagram} The phase diagram for carbon is shown in Fig. \ref{fig:carb}.
 Answer the following questions:
 
 (a) At 3000K, what is the minimum pressure needed before graphite changes into
@@ -77,9 +77,9 @@ keeping them under high pressure?
 
 \pagebreak
 
-2. \textbf{Vapor Pressure}
+2. (2 pts) \textbf{Vapor Pressure}
 
-3. \textbf{Clausius--Clapeyron Equation} The Clausius--Clapeyron equation
+3. (4 pts) \textbf{Clausius--Clapeyron Equation} The Clausius--Clapeyron equation
 relates the vapor pressure and temperature of the system given by
 \begin{equation}
   P_f = P_i e^{-\frac{\Delta H^\circ_\text{vap}}{R}(\frac{1}{T_2}-\frac{1}{T_1})}
@@ -97,7 +97,35 @@ water and water vapor are 4.184 J/(g $^\circ$C) and 1.996 J/(g $^\circ$C), respe
 
 \vspace{3in}
 
-4. 
+4. (4 pts) \textbf{Revisited Barometric Formula}
+
+\vspace{3in}
+
+5. (4 pts) \textbf{Real Gases} The Van der Waals equation extends the ideal gas equation to
+include the effects of interaction between molecules of a gas given by
+\begin{equation}
+  (P+\frac{a}{v^2})(v - b) = RT
+  \label{eqn:van_der}
+\end{equation}
+where $P$ is the pressure, $v$ is the molar volume, $a$ and $b$ are constants accounting
+for the non-ideality of the gas.
+
+(a) 
+
+(b) 
+
+6. (2 pts) \textbf{Van der Waals Constants $a$ and $b$} In eqn. \ref{eqn:van_der}, the constants
+$a$ and $b$ may be viewed as corrections to the ideal gas. $a$ accounts for the strength
+of attractions between its component molecules whereas $b$ considers the finite volume
+that the molecule occupies.
+
+(a) 
+
+(b) 
+
+7. (4 pts) \textit{Extra Credit:}
+
+8. (6 pts) \textit{Extra Credit:} 
 
 \vfill
 \textbf{Optional Additional Problems:} Ch. 11 - odd problems $35 - 45$,
