fix additional problems

--- a/week9/worksheet_8.tex
+++ b/week9/worksheet_8.tex
@@ -211,7 +211,6 @@ Partial credit may be given out. \textit{Hint:} Attend Prof. Furche and Brian's 
 \textbf{Due: March 14, 2022, at 10:30am}
 
 \vfill
-\textbf{Optional Additional Problems:} Ch. 11 - odd problems $35 - 45$,
-$53 - 89$; Ch. 12 - odd problems $27 - 51$, $77 - 89$; Ch. 13 - odd problems $65 - 93$
+\textbf{Optional Additional Problems:} Ch. 11 - odd problems $35 - 45$, $53 - 89$
 
 \end{document}
