updated worksheet 8 typo

--- a/week9/worksheet_8.tex
+++ b/week9/worksheet_8.tex
@@ -61,7 +61,7 @@ Answer the following questions:
 (a) At 3000K, what is the minimum pressure needed before graphite changes into
 diamond? At the phase change, determine the degrees of freedom using Gibbs phase rule.
 
-(b) What is the critical temperature $T_c$ for carbon? At the critical point,
+(b) What is the triple point temperature $T_p$ for carbon? At the triple point,
 determine the degrees of freedom using Gibbs phase rule.
 
 (c) Based on the phase diagram, are diamonds stable under normal conditions e.g.
