--- a/week10/worksheet_9.tex
+++ b/week10/worksheet_9.tex
@@ -89,6 +89,8 @@ assuming that oxygen exerts about $21\%$ of the atmospheric pressure?
 50.0g of phenol, the latter's freezing point was lowered by 1.454$^\circ$C. Calculate
 the molar mass of the solute. Phenol $K_f = 7.40^\circ/m$
 
+\pagebreak
+
 5. \textbf{Colligative Properties of Solution} Two beakers, one containing 0.10 m NaCl(aq)
 and the other containing 0.010 m AlCl$_3$(aq), are placed inside a bell jar and sealed.
 The beakers are left unitl the water vapor has come to equilibrium with any liquid in the
@@ -98,15 +100,20 @@ each beaker after quilibrium has been reached. Explain your reasoning.
 
 \begin{figure}[hbpt]
   \centering
+  \includegraphics[scale=0.3]{nacl_alcl3.png}
+  \caption{0.010 m NaCl and 0.010 m AlCl$_3$ are separated in equal sized
+    containers.}
   \label{fig:beakers}
 \end{figure}
 
-6. \textbf{Solid} Determine the number of atoms per unit cell, see Fig. \ref{fig:cubic}.
+6. \textbf{Solid Structures} Determine the number of atoms per unit cell,
+see Fig. \ref{fig:cub}.
 
 \begin{figure}[hbpt]
   \centering
   \includegraphics[scale=0.3]{cubic.png}
-  \label{fig:cubic}
+  \caption{Various solid structures}
+  \label{fig:cub}
 \end{figure}
 
 \vfill
