--- a/week10/worksheet_9.tex
+++ b/week10/worksheet_9.tex
@@ -35,7 +35,7 @@
 %
 % Title, authors, date
 \title{\textbf{Worksheet 9}}
-\date{\vspace{-2em}March 4th, 2022}
+\date{\vspace{-2em}March 8th, 2022}
 %
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -55,21 +55,35 @@ and no partial \textit{EC} (all parts must be correct) will be given out.
 Additional problems are listed at the end of each assignment. This week's
 assignment is due \textit{Monday, March 14th at 10:30am.}
 
-1. \textbf{Concentrations of Solutions} An car antifreeze mixture is made by mixing
+1. (4 pts) \textbf{Concentrations of Solutions} An car antifreeze mixture is made by mixing
 equal volumes of ethylene glycol (d = 1.114 g/mL, molar mass 62.07 g/mol) and water
-(d = 1.000 g/mL) at 20.0$^\circ$C. The density of the solution is 1.070 g/mL. Determine
-the mass percent, molarity, molality, and mole fraction.
+(d = 1.00 g/mL) at 20.0$^\circ$C. The density of the solution is 1.07 g/mL. Determine
+the mass percent, molarity, molality, and mole fraction. Report to 3 significant figures.
 
 %https://www.chemteam.info/Solutions/Molality-molarity-density-mass-precent-mole-ratio-Prob11-25.html
 
-2. \textbf{Henry's Law} The Henry's law says that the amount of dissolved gas in
-a given volume of solvent at equilibrium is proportional to the partial pressure of
-the gas. 
+\vspace{2in}
+
+3. (2 pts) \textbf{Raoult's Law} French scientist Fran\c{c}ois discovered that the vapor pressure
+of a solution $P(solution)$ is proportional to its mole fraction $x$ in a solution.
+\begin{equation}
+  P(\text{solution}) = x(\text{solvent})P_0(\text{solvent})
+\end{equation}
+Benzene has a vapor pressure of 100.0 Torr at $26^\circ$C. A nonvolatile compound was added
+to 0.300 mol benzene at $26^\circ$C and the vapor pressure of the benzene in the solution
+decreased to 60.0 Torr. What amount (in moles) of solute molecuels were added to the benzene?
+Report to 3 significant figures.
+
+\vspace{2in}
+
+2. (4 pts) \textbf{Henry's Law} The Henry's law says that the amount of dissolved gas
+$c(solute)$ in a given volume of solvent at equilibrium is proportional to the partial
+pressure of the gas $P(solute)$. 
 \begin{equation}
   c(\text{solute}) = k_HP(\text{solute})
 \end{equation}
 The minimum mass concentration of oxygen O$_2$ required for fish life is 4.0 mg/L.
-Henry's constant for O$_2$ is $1.2\times 10^{-3}$ mol/(L atm). Report results to 2
+Henry's constant $k_H$ for O$_2$ is $1.2\times 10^{-3}$ mol/(L atm). Report results to 2
 significant figures.
 
 (a) Assume the density of lake water to be 1.00 g/mL and express this concentration
@@ -83,15 +97,20 @@ assuming that oxygen exerts about $21\%$ of the atmospheric pressure?
 
 % Atkins 9.27
 
-3. \textbf{Raoult's Law} 
+\vspace{3in}
 
-4. \textbf{Freezing Point Depression} When 1.32g of a nonpolar solute was dissolved in
+% Atkins 9.50
+
+4. (2 pts) \textbf{Freezing Point Depression} When 1.32g of a nonpolar solute was dissolved in
 50.0g of phenol, the latter's freezing point was lowered by 1.454$^\circ$C. Calculate
-the molar mass of the solute. Phenol $K_f = 7.40^\circ/m$
+the molar mass of the solute given phenol $K_f = 7.27^\circ\text{K}/m$. Report to 3 significant
+figures.
 
-\pagebreak
+% Atkins 9.56
 
-5. \textbf{Colligative Properties of Solution} Two beakers, one containing 0.10 m NaCl(aq)
+\vspace{3in}
+
+5. (2 pts) \textbf{Colligative Properties of Solution} Two beakers, one containing 0.10 m NaCl(aq)
 and the other containing 0.010 m AlCl$_3$(aq), are placed inside a bell jar and sealed.
 The beakers are left unitl the water vapor has come to equilibrium with any liquid in the
 container. The levels of the liquid in each beaker at the beginning of the experiment
@@ -100,21 +119,57 @@ each beaker after quilibrium has been reached. Explain your reasoning.
 
 \begin{figure}[hbpt]
   \centering
-  \includegraphics[scale=0.3]{nacl_alcl3.png}
+  \includegraphics[scale=0.2]{nacl_alcl3.png}
   \caption{0.010 m NaCl and 0.010 m AlCl$_3$ are separated in equal sized
     containers.}
   \label{fig:beakers}
 \end{figure}
 
-6. \textbf{Solid Structures} Determine the number of atoms per unit cell,
+\vspace{2in}
+
+6. (3 pts) \textbf{Solid Structures} Determine the number of atoms per unit cell,
 see Fig. \ref{fig:cub}.
 
 \begin{figure}[hbpt]
   \centering
-  \includegraphics[scale=0.3]{cubic.png}
+  \includegraphics[scale=0.25]{cubic.png}
   \caption{Various solid structures}
   \label{fig:cub}
 \end{figure}
+
+\vspace{3in}
+
+7. (4 pts) \textbf{Osmotic Pressure} 0.020 M C$_6$H$_{12}$O$_6$(aq)
+solution (glucose) is separated from 0.050 M CO(NH$_2$)$_2$(aq) solution (urea) by a
+semipermeable membrane at $25^\circ$C. Report to 2 significant figures.
+
+(a) Which solution has the higher osmotic pressure?
+
+(b) Which solution becomes more dilute with the passage of water molecules through the
+membrane?
+
+(c) To which solution should an external pressure be applied to maintain an equilibrium
+flow of water molcules across the membrane?
+
+(d) What external pressure (in atm) should be applied in part (c)?
+
+\vspace{2in}
+
+8. (4 pts) \textbf{Freezing Point Depression} \textit{Extra Credit:} Colligative properties
+can be sources of insight not only for the properties of solutions, but also the properties
+of the solute. For example, acetic acid (CH$_3$COOH) behaves differently in two different
+solvents. Report to 3 significant figures.
+
+(a) The freezing point of a 5.00$\%$ by mass aqueous acetic acid solution is $-1.72^\circ$C.
+What is the molar mass of the solute? Explain any discrepancy between the experimental and
+the expected molar mass. Given water $k_f = 1.86 \text{K}/m$.
+
+(b) The freezing-point depression associated with a 5.00$\%$ by mass solution of acetic
+acid in benzene is 2.32$^\circ$C. What is the experimental molar mass of the solute in
+benzene? What can you conclude about the nature of acetic acid in benzene? Given
+benzene $k_f = 5.12 \text{K}/m$.
+
+% Atkins 9.105
 
 \vfill
 \textbf{Optional Additional Problems:} Ch. 12 - odd problems $25 - 47$, $79 - 85$;
