updated due date

--- a/week10/worksheet_9.tex
+++ b/week10/worksheet_9.tex
@@ -53,7 +53,7 @@ cited. An \textit{extra credit} (\textit{EC}) problem will be available per
 assignment. Please submit a completed homework on-time to receive \textit{EC}
 and no partial \textit{EC} (all parts must be correct) will be given out.
 Additional problems are listed at the end of each assignment. This week's
-assignment is due \textit{Monday, March 14th at 10:30am.}
+assignment is due \textit{Monday, March 14th at 11:59pm.}
 
 1. (4 pts) \textbf{Concentrations of Solutions} An car antifreeze mixture is made by mixing
 equal volumes of ethylene glycol (d = 1.114 g/mL, molar mass 62.07 g/mol) and water
