updated extra extra credit deadline

--- a/week9/worksheet_8.tex
+++ b/week9/worksheet_8.tex
@@ -208,7 +208,7 @@ covalent bonds. However, this is not necessarily the correct interpretation. Att
 \end{figure}
 
 Partial credit may be given out. \textit{Hint:} Attend Prof. Furche and Brian's office hours.
-\textbf{Due: March 14, 2022, at 10:30am}
+\textbf{Due: March 15, 2022, at 11:59pm}
 
 \vfill
 \textbf{Optional Additional Problems:} Ch. 11 - odd problems $35 - 45$, $53 - 89$
