--- a/week10/worksheet_9.tex
+++ b/week10/worksheet_9.tex
@@ -56,16 +56,17 @@ Additional problems are listed at the end of each assignment. This week's
 assignment is due \textit{Monday, March 14th at 11:59pm.}
 
 1. (4 pts) \textbf{Concentrations of Solutions} An car antifreeze mixture is made by mixing
-equal volumes of ethylene glycol (d = 1.114 g/mL, molar mass 62.07 g/mol) and water
+equal volumes of ethylene glycol (d = 1.114 g/mL, molar mass 62.07 g/mol) and deionized water
 (d = 1.00 g/mL) at 20.0$^\circ$C. The density of the solution is 1.07 g/mL. Determine
-the mass percent, molarity, molality, and mole fraction. Report to 3 significant figures.
+the mass percent, molarity, molality, and mole fraction of 2.00 L car antifreeze mixture. Report
+to 3 significant figures.
 
 %https://www.chemteam.info/Solutions/Molality-molarity-density-mass-precent-mole-ratio-Prob11-25.html
 
 \vspace{2in}
 
 2. (2 pts) \textbf{Raoult's Law} French scientist Fran\c{c}ois discovered that the vapor pressure
-of a solution $P(solution)$ is proportional to its mole fraction $x$ in a solution.
+of a solution $P(\text{solution})$ is proportional to its mole fraction $x$ in a solution.
 \begin{equation}
   P(\text{solution}) = x(\text{solvent})P_0(\text{solvent})
 \end{equation}
